Зафиксирована промежуточная версия

--- a/insurance/apps/ins_notification/templates/notification/inbox.html
+++ b/insurance/apps/ins_notification/templates/notification/inbox.html
@@ -24,8 +24,7 @@
 
   <div id="buttons">
   <ul>
-    {# <li><a href="{% url notification_user_ask %}">Задать вопрос</a></li> #}
-    <li><a href="#">Задать вопрос</a></li>
+    <li><a href="{% url ins_notification_question %}">Задать вопрос</a></li>
     <li class="separator"> | </li>
     <li><a href="{% url userprofile_edit %}">Назад</a></li>
 
