Регистрация со страницы логина, изменения в servlet_test

--- a/insurance/apps/calc/templates/servlet_test.html
+++ b/insurance/apps/calc/templates/servlet_test.html
@@ -29,8 +29,8 @@
 		<div class="calk_form">
 			<div class="calk_tabs">
 				<ul class="calk_tabs_link">
-					<li><a class="" href="#tabs_1">ОСАГО</a></li>
-					<li><a class="" href="#tabs_2">КАСКО</a></li>
+					<li><a class="" href="#tabs_1">КАСКО</a></li>
+					<li><a class="" href="#tabs_2">ОСАГО</a></li>
 					<li><a class="" href="#tabs_3">ДМС</a></li>
 					<li><a class="" href="#tabs_4">ДАГО</a></li>
 					<li><a class="" href="#tabs_5">НС</a></li>
@@ -131,21 +131,25 @@
 					</div>
 			
 			
-			
-			
-			
-			
-			
-			
-			
-			
 				</div>
-				<div class="calk_content" id="tabs_2"></div>
-				<div class="calk_content" id="tabs_3"></div>
-				<div class="calk_content" id="tabs_4"></div>
-				<div class="calk_content" id="tabs_5"></div>
-				<div class="calk_content" id="tabs_6"></div>
-				<div class="calk_content" id="tabs_7"></div>
+					<div class="calk_content" id="tabs_2">
+					ОСАГО
+				</div>
+				<div class="calk_content" id="tabs_3">
+					ДМС
+				</div>
+				<div class="calk_content" id="tabs_4">
+					ДАГО
+				</div>
+				<div class="calk_content" id="tabs_5">
+					НС
+				</div>
+				<div class="calk_content" id="tabs_6">
+					ВЗР
+				</div>
+				<div class="calk_content" id="tabs_7">
+					ИЛ
+				</div>
 				
 				<script>
 					$(function () {
