--- a/insurance/templates/registration/login.html
+++ b/insurance/templates/registration/login.html
@@ -5,5 +5,8 @@
 {{ form.as_p }}
 <input type="submit" value="Submit" />
 </form>
+
+<li><a href="{% url registration_register %}">Зарегистрироваться</a></li>
+
 <li><a href="{% url auth_password_reset %}">Забыли пароль?</a></li>
 {% endblock %}
