--- a/insurance/apps/calc/templates/servlet_test.html
+++ b/insurance/apps/calc/templates/servlet_test.html
@@ -129,6 +129,36 @@
 							</tr>
 						</table>
 					</div>
+					
+					
+					
+					
+<form action="/calc/servlet_test/" method="post">
+{% csrf_token %}
+<table width="460" cellspacing="5" cellpadding="4" border="0">
+{{ servlet_test_form.as_table }}
+<tr>
+  <td></td>
+  <td><input type="submit" value="Результат" /></td>
+</tr>
+</table>
+</form>
+
+{% if result  %}
+<h2 <style="padding: 20px">
+Получен результат:
+</h2>
+<div style="padding: 20px">
+{% autoescape off %}
+{{ result  }}
+{% endautoescape %}
+</div> 
+{% else %}
+{% endif %}
+					
+					
+					
+					
 			
 			
 				</div>
