В форму ответа на письмо добавлены "Хлебные крошки"

--- a/insurance/apps/ins_notification/templates/notification/admin_question_answer_letter.html
+++ b/insurance/apps/ins_notification/templates/notification/admin_question_answer_letter.html
@@ -28,3 +28,10 @@
 </div>
 
 {% endblock %}
+
+{% block breadcrumbs %}
+<div class="breadcrumbs"><a href="/admin/">Начало</a>
+&nbsp;&rsaquo;&nbsp;
+<a href="/admin/ins_notification/question/">Вопросы</a>
+</div>
+{% endblock %}
