В форму ответа на вопрос польователя добавлен показ адреса польователя.

--- a/insurance/apps/ins_notification/templates/notification/admin_question_answer_letter.html
+++ b/insurance/apps/ins_notification/templates/notification/admin_question_answer_letter.html
@@ -16,8 +16,8 @@
 </ul>
 {% else %}
   Пользователь: {{ fio }} <br />
-  Спрашивал: {{ qwestion.sent_time }}
-
+  Спрашивал: {{ qwestion.sent_time }} <br />
+  Адрес пользователя: {{ user.email }}
 <form action="" method="post">{% csrf_token %}
 <table width="" cellspacing="" cellpadding="" border="">
   {{ answ_form.as_table }}
