--- a/insurance/apps/profile/templates/admin/auth/user/notification_form.html
+++ b/insurance/apps/profile/templates/admin/auth/user/notification_form.html
@@ -6,8 +6,7 @@
 {% block breadcrumbs %}
 <div class="breadcrumbs">
      <a href="../../../">{% trans "Home" %}</a> &rsaquo;
-     <a href="../../">{{ app_label|capfirst }}</a> &rsaquo;
-     <a href="../">{{ model_label|capfirst }}</a> &rsaquo;
+     <a href="/admin/auth/user/">Пользователи</a> &rsaquo;
      Послать пользователям уведомления
 </div>
 {% endblock %}
@@ -32,3 +31,4 @@
   </div>
 </form>
 {% endblock %}
+
