Issue #33 Первый вариант двух шагов калькулятора

--- a/insurance/local_settings.py.tmpl
+++ b/insurance/local_settings.py.tmpl
@@ -24,3 +24,6 @@ EMAIL_USE_TLS = True
 
 # 1 for directif.ru, 2 for dev.directif.ru
 SITE_ID = 1
+
+# ========= Servlet DB settings =========
+# SERVLET_DB_PORT = 4306
