Fixes #27. Форма обратной связи.
Для ответа на вопросы используется общая механика приложения ins_notification

--- a/insurance/apps/profile/templates/profile/userprofile_base.html
+++ b/insurance/apps/profile/templates/profile/userprofile_base.html
@@ -16,6 +16,8 @@
     <li><a href="{% url userprofile_policylist %}">Мои полисы</a></li>
     <li class="separator"> | </li>
     <li><a href="{% url ins_notification_inbox %}">Мои уведомления</a></li>
+    <li class="separator"> | </li>
+    <li><a href="{% url userprofile_faq %}">FAQ</a></li>
 
     <!-- <li>Invite a friend</li> -->
   </ul>
