Issue #33 Добавлена обработка дополнительны параметров на шаге 2 калькулятора Issue #33 добавлен шаг 3 в калькулятор
Issue #33 Переименован а переменная form_fields в servlet_request_data

Issue #33 добавлена форма второго шага калькулятора

--- a/insurance/apps/calc/templates/calc_step_2.html
+++ b/insurance/apps/calc/templates/calc_step_2.html
@@ -267,8 +267,9 @@
 
 
   <tr>
-    <td><input type="submit" value="Подсчитать" /></td>
-    <td></td><td></td>
+    <td><input name="calculate"  type="submit" value="Пересчитать" /></td>
+    <td></td>
+    <td></td>
   </tr>
 
 
