--- a/insurance/apps/calc/templates/calc_step_1.html
+++ b/insurance/apps/calc/templates/calc_step_1.html
@@ -1,9 +1,14 @@
 {% extends "base.html" %}
 
 
-{% block content %}
+{% block extra_head %}
 
 <script type="text/javascript" src="{{ STATIC_URL }}calc/js/lib_dbg.js"></script>
+
+<link href="{{ STATIC_URL }}calc/js/themes/base/jquery.ui.all.css" rel="stylesheet" type="text/css"/>
+<script type="text/javascript" src="{{ STATIC_URL }}calc/js/jquery-1.5.1.min.js "></script>
+<script type="text/javascript" src="{{ STATIC_URL }}calc/js/jquery-ui-1.8.14.custom.min.js"></script>
+
 <script type="text/javascript">
   marks = {{ marks|safe }}
   models = {{ models|safe }}
@@ -12,9 +17,13 @@
   get_data = {{ js_str|safe }}
   {% endif %}
 </script>
-<script type="text/javascript" src="{{ STATIC_URL }}calc/js/calc.js"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}calc/js/calc_step_1.js"></script>
+{% endblock %} <!-- extra_head -->
 
-		  <form action="/calc/calc_step_1/" method="post">
+{% block content %}
+
+
+<form action="/calc/calc_step_1/" method="post">
 {% csrf_token %}
 
 <table width="460" cellspacing="5" cellpadding="4" border="0">
@@ -65,7 +74,11 @@
 
 <tr>
   <td>Цена: </td>
-  <td>{{ calc_step_one_form.price }}</td>
+  <td>
+   {# {{ calc_step_one_form.price }} #}
+    <input type="text" name="price" value="" id="id_price" />
+    <div id="calc_price"></div>
+  </td>
 </tr>
 
 <tr>
@@ -88,7 +101,12 @@
   <td><input type="submit" value="Результат" /></td>
 </tr>
 
+</table>
+
 </form>
+
+
+
 
 {% endblock %} <!-- Конец контент -->
 
