Вынес настройки по сервлета в local_settings.py

--- a/insurance/local_settings.py.tmpl
+++ b/insurance/local_settings.py.tmpl
@@ -25,5 +25,12 @@ EMAIL_USE_TLS = True
 # 1 for directif.ru, 2 for dev.directif.ru
 SITE_ID = 1
 
+
 # ========= Servlet DB settings =========
-# SERVLET_DB_PORT = 4306
+SERVLET_DB_PORT = 3306
+SERVLET_DB_HOST = '188.127.249.249'
+SERVLET_DB = 'inservlet'
+SERVLET_DB_USER = 'insdu'
+SERVLET_DB_PASS = 'insdpwd'
+
+SERVLET_URL = 'http://www.polisbook.ru:8080/ServerIF/MatrixIF'
