--- a/insurance/apps/calc/templates/includes/calc_table_row.html
+++ b/insurance/apps/calc/templates/includes/calc_table_row.html
@@ -15,7 +15,8 @@
     ЭВАКУАЦИЯ<br /> СТЕКЛА БЕЗ СПРАВОК<br /> ЛКП БЕЗ СПРАВОК
   </td>
   <td class="td_11">
-    <div class="strahovka_button"><a href="#"><img src="{{ STATIC_URL }}images/zakaz.jpg" alt="" /></a></div>
+    <div class="strahovka_button"><a href="/calc/calc_step_3/?{{row.query_str }}">
+	<img src="{{ STATIC_URL }}images/zakaz.jpg" alt="" /></a></div>
     <div class="price">{{ row.ourscore }} <span>руб.</span></div>
     <div class="price_none">{{ row.score }} руб.</div>
   </td>
