--- a/insurance/apps/calc/templates/includes/calc_table.html
+++ b/insurance/apps/calc/templates/includes/calc_table.html
@@ -10,17 +10,17 @@
       <table cellpadding="0" cellspacing="0" class="sort">
 	<tr>
 	  <th>
-	    <span class="niceCheck"><input type="checkbox" name="ch1" /></span>
+	    <span class="niceCheck"><input type="checkbox" name="factor_price" /></span>
 	    <label>Цена</label>
 	  </th>
 	  <td>
-	    <span class="niceCheck"><input type="checkbox" name="ch1" /></span>
+	    <span class="niceCheck"><input type="checkbox" name="factor_reputation" /></span>
 	    <label>Репутация компании</label>
 	  </td>
 	</tr>
 	<tr>
 	  <th>
-	    <span class="niceCheck"><input type="checkbox" name="ch1" /></span>
+	    <span class="niceCheck"><input type="checkbox" name="factor_service" /></span>
 	    <label>Сервис</label>
 	  </th>
 	  <td>
@@ -34,7 +34,7 @@
 	    <label>Эвакуация</label>
 	  </th>
 	  <td>
-	    <span class="niceCheck"><input type="checkbox" name="ch1" /></span>
+	    <span class="niceCheck"><input type="checkbox" name="factor_easepay" /></span>
 	    <label>Простота выплаты</label>
 	  </td>
 	</tr>
@@ -53,7 +53,7 @@
   </div>
   <div class="resultat_table_cont">
     <table cellpadding="0" cellspacing="0" id="tabletwo">
-      {% for row in result.info %}
+      {% for row in products_data %}
       {% include "includes/calc_table_row.html" %}
       {% endfor %}
     </table>
